--- a/Aula2/Strings/Exercícios de fixação/index.html
+++ b/Aula2/Strings/Exercícios de fixação/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strings,Arrays</title>
+    <title>ExercíciosFixação</title>
 </head>
 <body>
     <script src="./script.js"></script>
