--- a/Aula5/index.html
+++ b/Aula5/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>algoritimos naturais x estruturados</title>
+    <title>interpretacao e escrita de codigo.</title>
 </head>
 <body>
     <script src="script.js" defer></script>
