--- a/Aula7/ExerciciosDeFixacao/index.html
+++ b/Aula7/ExerciciosDeFixacao/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operadores Aritmeticos e Comparadores</title>
+    <title>ExerciciosFixacao</title>
 </head>
 <body>
     <script src="script.js" defer></script>
